tests/neg/i5453/S.scala
class S extends J {
  override def foo(): Int = 42 // error: incompatible return type
}
